--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>me.bannock</groupId>
     <artifactId>virus</artifactId>
+    <description>Yiff virus</description>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
